redis-cache/sentinel/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel-headless
  namespace: redis
  labels:
    environment: prod
    tier: cache
    app.kubernetes.io/name: sentinel
    app.kubernetes.io/instance: sentinel
    app.kubernetes.io/version: "7.2"
    app.kubernetes.io/component: sentinel
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: sentinel
  ports:
    - name: sentinel
      port: 26379
---
apiVersion: v1
kind: Service
metadata:
  name: sentinel
  namespace: redis
  labels:
    environment: prod
    tier: cache
    app.kubernetes.io/name: sentinel
    app.kubernetes.io/instance: sentinel
    app.kubernetes.io/version: "7.2"
    app.kubernetes.io/component: sentinel
spec:
  selector:
    app.kubernetes.io/name: sentinel
  ports:
    - name: sentinel
      port: 26379
